--- a/src/pages/profile/profile.module.scss
+++ b/src/pages/profile/profile.module.scss
@@ -15,6 +15,17 @@
     margin: auto;
     height: 300px;
     margin-top: 20px;
+    position: relative;
+
+    display: flex;
+    align-items: center;
+
+    @media (max-width: 890px) {
+        flex-wrap: wrap;
+        height: 400px;
+        justify-content: center;
+        padding-bottom: 50px;
+    }
 }
 
 .featureBlock{
@@ -97,4 +108,36 @@
             margin: 10px;
         }
     }
+}
+
+.logoutButton{
+    float: right;
+    top: 5px;
+    left: 5px;
+    position: absolute;
+    padding: 5px 10px;
+    background: transparent;
+    color: var(--orange);
+    text-decoration: underline;
+}
+
+.editButton{
+    float: right;
+    bottom: 15px;
+    right: 15px;
+    position: absolute;
+    padding: 5px 10px;
+}
+
+.editButton::after {
+    content: "✏️";
+    margin-left: 10px;
+    font-size: 15px;
+}
+
+.profileImageContainer{
+    background-color: grey;
+    width: 200px;
+    height: 200px;
+    margin: 40px;
 }
