--- a/src/pages/components/backButton/backButton.module.scss
+++ b/src/pages/components/backButton/backButton.module.scss
@@ -1,6 +1,6 @@
 .backButton{
     background-color: transparent;
-    color: var(--orange);
+    color: #F9F2F2;
     top: 10px;
     left: 10px;
     position: absolute;
