--- a/src/pages/interview/interview.module.scss
+++ b/src/pages/interview/interview.module.scss
@@ -5,6 +5,9 @@
     align-items: center;
     height: 100vh;
     position: relative;
+    @media (max-width: 890px) {
+        align-items: flex-end;
+    }
 }
 
 .interviewDoingContainer{
@@ -14,6 +17,9 @@
     align-items: center;
     height: 100vh;
     position: relative;
+    @media (max-width: 890px) {
+        justify-content: end;
+    }
 }
 
 .interviewContent{
@@ -48,21 +54,39 @@
             margin: 0px 10px;
         }
     }
+
+    @media (max-width: 890px) {
+        height: 90vh;
+        bottom: 0;
+        border-radius: 20px 20px 0px 0px;
+
+        label{
+            background-color: #f0a37d;
+            padding: 10px;
+            border-radius: 10px;
+            margin: 15px;
+        }
+    }
 }
 
 .techContent{
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 20px;
     margin: 30px 30px;
     cursor: pointer;
+
+    input ~ .checkmark {
+        border: none;
+    }    
 
     &:hover input ~ .checkmark {
         background-color: #ccc;
     }
 
     input:checked ~ .checkmark {
-        background-color: #2196F3;
+        background-color: var(--orange);
     }
     
     input{
@@ -96,10 +120,36 @@
     max-width: 1000px;
     height: 80vh;
     background-color: white;
-    border-radius: 20px;
-    box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 25%);
+    border-radius: 20px; 
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #D75413;
+
+    @media (max-width: 890px) {
+        border: none;
+        border-radius: 20px 20px 0px 0px;
+    }
 }
+
+.messagesContainer::-webkit-scrollbar {
+    width: 12px;   
+    border-radius: 0px 20px 20px 0px; 
+    @media (max-width: 890px) {
+        width: 0px;
+    }
+  }
+  
+  .messagesContainer::-webkit-scrollbar-track {
+    background: var(--orange);  
+    border-radius: 0px 20px 20px 0px;       
+  }
+  
+  .messagesContainer::-webkit-scrollbar-thumb {
+    background-color: white; 
+    border-radius: 0px 10px 10px 0px; 
+    border: 3px solid var(--orange); 
+  }
 
 .inputMessageContainer{
     width: 100%;
@@ -118,6 +168,15 @@
         width: 85%;
         height: 70%;
         color: black;
+    }
+
+    @media (max-width: 890px) {
+       border-radius: 0;
+       bottom: 0;
+       input{
+            width: 65%;
+        }
+
     }
 
 }
