--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #D75413;
 }
 
 h1, h2, h3, h4, p, li, a {
@@ -44,6 +45,8 @@ button{
     width: 80%;
     padding: 20px;
     border-radius: 20px;
+    letter-spacing: 1px;
+    transition: 0.5s;
 }
 
 .message.interviewer{
@@ -59,12 +62,13 @@ button{
     border-bottom: 10px solid transparent; 
     border-right: 10px solid #f18c59; 
     position: absolute;
-    left: -10px;    top: 20px;
+    left: -9px;    
+    top: 20px;
 }
 
 .message.candidate{
     background-color: #f5c3ac;
-    float: right;
+    align-self: flex-end;
     position: relative;
 }
 
@@ -76,6 +80,29 @@ button{
     border-bottom: 10px solid transparent;
     border-left: 10px solid #f5c3ac;
     position: absolute;
-    right: -10px;
+    right: -9px;
     top: 20px;
 }
+
+.message.option{
+    width: 50%;
+    padding: 10px 20px;
+    margin: 10px 20px;
+    background-color: #cacaca;
+}
+
+.message.option::before{
+    display: none;
+}
+
+.message.answer{
+    width: 50%;
+    padding: 10px 20px;
+    margin: 10px 20px;
+    background-color: #cacaca;
+}
+
+.message.answer::before{
+    display: none;
+}
+
