--- a/src/pages/edit/edit.module.scss
+++ b/src/pages/edit/edit.module.scss
@@ -23,7 +23,7 @@
     display: flex;
     align-items: center;
 
-    border: 1px solid #D75413;
+    border: 1px solid #141E39;
 
     @media (max-width: 890px) {
         flex-wrap: wrap;
@@ -37,6 +37,11 @@
     width: 200px;
     height: 200px;
     margin: 40px;
+    overflow: hidden;
+
+    img{
+        width: 100%;
+    }
 }
 
 .profileImageContainer{
