--- a/src/pages/profile/profile.module.scss
+++ b/src/pages/profile/profile.module.scss
@@ -3,6 +3,11 @@
     width: 100%;
     max-width: 1000px;
     margin: auto;
+    overflow: hidden;
+
+    img{
+        width: 100%;
+    }
 
     div{
         border-radius: 20px;
@@ -20,7 +25,7 @@
     display: flex;
     align-items: center;
 
-    border: 1px solid #D75413;
+    border: 1px solid #141E39;
 
     @media (max-width: 890px) {
         flex-wrap: wrap;
@@ -88,6 +93,43 @@
     }
 }
 
+.candidateBlock{
+    display: flex;
+    justify-content: center;
+    background-color: #485fca;
+    height: 400px;
+    width: 48%;
+    cursor: pointer;
+    border: 1px solid #485fca;
+
+    &:hover{
+        box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 30%);
+    }
+
+    button{
+        background-color: #485fca;
+        padding: 10px 20px;   
+        border-radius: 15px;
+    }
+
+    @media (max-width: 890px) {
+        width: 100%;
+        height: 170px;
+        margin-top: 40px;
+        align-items: center;
+        justify-content: space-around;
+
+        img{
+            max-width: 120px !important;
+        }
+
+        button{
+            height: 60px;
+            margin: 10px;
+        }
+    }
+}
+
 .logoutButton{
     float: right;
     top: 5px;
@@ -118,4 +160,5 @@
     width: 200px;
     height: 200px;
     margin: 40px;
+    overflow: hidden;
 }
